tooling/nargo_cli/tests/snapshots/execution_success/cast_to_u128/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: i8) {
    let y: i8 = -1;
    assert((x as u128) == 340282366920938463463374607431768211455);
    assert((y as u128) == 340282366920938463463374607431768211455);
}
