tooling/nargo_cli/tests/snapshots/execution_success/cast_to_u128/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _2",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [_0]:8 bits []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 128 ], EXPR [ 256 ]], outputs: [_1, _2]",
    "BLACKBOX::RANGE [_1]:1 bits []",
    "BLACKBOX::RANGE [_2]:8 bits []",
    "EXPR [ (1, _0) (-256, _1) (-1, _2) 128 ]",
    "EXPR [ (1, _0) (340282366920938463463374607431768211200, _1) -340282366920938463463374607431768211455 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]"
  ],
  "debug_symbols": "lZDBCoMwDIbfJece1M0dfJUxpNY4CqEtsRWG+O6LRTc97LBL0uTP15B/hh679GytG/wIzX2Gji2RfbbkjY7WO+nOi4K9bCMjSgsOulBBM7oIjUtECiZNKQ+NQbuco2ZRCwXoesny4WAJ19eivnTxG62rjb2VH7j+ny6L6oQ/pNLG8ulcKGVQQZXjJcdrjjU0Kz5ptroj3KwZkjMHp+Ir7MruZWBvsE+M65qsyeI3",
  "file_map": {
    "50": {
      "source": "fn main(x: i8) {\n    let y: i8 = -1;\n\n    assert_eq(x as u128, 340282366920938463463374607431768211455);\n    assert_eq(y as u128, 340282366920938463463374607431768211455);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
