tooling/nargo_cli/tests/snapshots/execution_success/cast_to_u128/execute__tests__force_brillig_true_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 8
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _0",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ]], outputs: []",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32837 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 1 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(2), offset_address: Relative(3) }, Cast { destination: Direct(32836), source: Direct(32836), bit_size: Integer(U8) }, Mov { destination: Relative(1), source: Direct(32836) }, Call { location: 13 }, Call { location: 14 }, Const { destination: Relative(1), bit_size: Integer(U32), value: 32837 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 0 }, Stop { return_data: HeapVector { pointer: Relative(1), size: Relative(2) } }, Return, Call { location: 30 }, Cast { destination: Relative(2), source: Relative(1), bit_size: Integer(U8) }, Const { destination: Relative(3), bit_size: Integer(U8), value: 128 }, BinaryIntOp { destination: Relative(4), op: LessThan, bit_size: U8, lhs: Relative(2), rhs: Relative(3) }, Not { destination: Relative(2), source: Relative(4), bit_size: U1 }, Cast { destination: Relative(3), source: Relative(2), bit_size: Integer(U128) }, Const { destination: Relative(2), bit_size: Integer(U128), value: 340282366920938463463374607431768211200 }, BinaryIntOp { destination: Relative(4), op: Mul, bit_size: U128, lhs: Relative(2), rhs: Relative(3) }, Cast { destination: Relative(2), source: Relative(1), bit_size: Integer(U128) }, BinaryIntOp { destination: Relative(1), op: Add, bit_size: U128, lhs: Relative(4), rhs: Relative(2) }, Const { destination: Relative(2), bit_size: Integer(U128), value: 340282366920938463463374607431768211455 }, BinaryIntOp { destination: Relative(3), op: Equals, bit_size: U128, lhs: Relative(1), rhs: Relative(2) }, JumpIf { condition: Relative(3), location: 29 }, Const { destination: Relative(4), bit_size: Integer(U32), value: 0 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Relative(4) } }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 35 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "lZHBbsMgDIbfxWcOQEa65VWqKiKJUyEhElGYNEW8+0zcbOlhh138Ycz/28IbTDjke+/CvDygu24wROe9u/d+GW1yS6DbDWQNykCnBKiWcWG8Mz52aMlQDM1oGG/QaYJhtIwLg1x0KQKOrn2KiLXpaQwabrURQ4IuZO8FfFqf90eP1YadyUaqSgEYJiIZzs5jPRXxq5Z/S41+alv1Izb/VyupX+Q3yuzo4suvlmoUnR08PtM5h/FUTV/rUTm2ssZlxClHrE6n1VC8NlI05lZqt28=",
  "file_map": {
    "50": {
      "source": "fn main(x: i8) {\n    let y: i8 = -1;\n\n    assert_eq(x as u128, 340282366920938463463374607431768211455);\n    assert_eq(y as u128, 340282366920938463463374607431768211455);\n}\n",
      "path": ""
    }
  },
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
