tooling/nargo_cli/tests/snapshots/execution_success/cast_to_u128/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: i8):
    (no terminator instruction)
}
